--- a/chat_app.kv
+++ b/chat_app.kv
@@ -39,7 +39,7 @@
     height: dp(60)
     size_hint_x: 0.4
     adaptive_height: True
-    pos_hint: {'center_x': 0.2}
+    pos_hint: {'center_x': 0.25}
     MDScreen:
         md_bg_color: "f59e42" 
         radius: dp(25)
@@ -54,10 +54,9 @@
 <Chat>:
     MDBoxLayout:
         orientation: 'vertical'
-        spacing: dp(20)
 
         MDTopAppBar:
-            title: "GPT2-ChatApp"
+            title: 'GPT-2 Chat'
             orientation: "horizontal"
             
             MDIconButton:
@@ -69,19 +68,40 @@
                 icon: "skip-next-circle"
                 on_release: root.next_music()
 
-        MDBoxLayout:
-            size_hint_y: None
-            height: dp(40)
+        FloatLayout:
+            orientation: 'horizontal'
 
-        ScrollView:
-            id: chat_scroll_view
+            ScrollView:
+                id: chat_scroll_view
+                size_hint_x: 1.0
+
+                MDBoxLayout:
+                    id: chat_area
+                    adaptive_height: True
+                    orientation: "vertical"
+                    spacing: dp(12)
+                    padding: [dp(50), dp(20), dp(20), dp(20)]
 
             MDBoxLayout:
-                id: chat_area
-                adaptive_height: True
-                orientation: "vertical"
-                padding: dp(20)
-                spacing: dp(12)
+                size_hint_x: None
+                width: dp(56)
+                orientation: 'vertical'
+                pos_hint: {'center_y': 1.0}
+                spacing: dp(10)
+                padding: [dp(10), dp(10), dp(10), dp(0)]
+
+                MDFloatingActionButton:
+                    id: menu_button
+                    icon: "layers-triple"
+                    on_release: root.menu.open()
+
+                MDFloatingActionButton:
+                    icon: "delete"
+                    on_release: root.del_chat()
+
+                MDFloatingActionButton:
+                    icon: "plus-circle"
+                    on_release: root.new_chat()
 
         MDBoxLayout:
             size_hint_y: None
